Add tests for event property capture configuration
Introduces tests to verify event property capture toggling via application properties. Adds tests for enabling/disabling all event details, as well as focused tests for the endpointExists property. Also moves request body capture tests into a dedicated 'body' subpackage for better organization.