@@ -1,4 +1,4 @@
-package com.davidrandoll.spring_web_captor.app_property;
+package com.davidrandoll.spring_web_captor.app_property.endpoint_exists;
 
 import com.davidrandoll.spring_web_captor.WebCaptorApplication;
 import com.davidrandoll.spring_web_captor.setup.EventCaptureListener;
@@ -12,17 +12,17 @@ import org.springframework.http.MediaType;
 import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.web.servlet.MockMvc;
 
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.MOCK, classes = WebCaptorApplication.class)
 @AutoConfigureMockMvc
 @TestPropertySource(properties = {
-        "web-captor.event-details.include-request-body=false"
+        "web-captor.event-details.include-endpoint-exists=false"
 })
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
-class RequestBodyCaptureDisabledTest {
+class EndpointExistsDisabledTest {
 
     @Autowired
     private MockMvc mockMvc;
@@ -35,13 +35,13 @@ class RequestBodyCaptureDisabledTest {
     }
 
     @Test
-    void testRequestBodyNotCapturedWhenDisabled() throws Exception {
+    void testEndpointExistsIsNotCapturedWhenDisabled() throws Exception {
         mockMvc.perform(post("/test/property/echo")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"key\":\"value\"}"))
+                        .contentType(MediaType.TEXT_PLAIN)
+                        .content("hello"))
                 .andExpect(status().isOk());
 
-        var requestEvent = eventCaptureListener.getRequestEvents().getFirst();
-        assertTrue(requestEvent.getRequestBody().isNull());
+        var request = eventCaptureListener.getRequestEvents().get(0);
+        assertFalse(request.isEndpointExists(), "Expected endpointExists to be false when disabled");
     }
 }
